--- a/Quine/Quine.csproj
+++ b/Quine/Quine.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.0</TargetFramework>
-    <RuntimeIdentifiers>win7-x64</RuntimeIdentifiers>
+    <RuntimeIdentifier>win7-x64</RuntimeIdentifier>
     <StartupObject>Program</StartupObject>
     <Authors>Amar Persaud</Authors>
     <Company>N/A</Company>
